--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <!--------HEADER-------------------------->
 <header> 
   <nav>
-   <label class="logo"><a href="index.html"><img src="bilder/minimize/Logo_Anne-01.svg" alt="Logo Anne Dalchow"></a></label>
+   <label class="logo"><a href="index.html"><img src="bilder/minimize/Logo_Anne-01.svg" alt="Logo Anne Dalchow führt zur Landingpage"></a></label>
    <input type="checkbox" id="toggle_button">
    <label for="toggle_button" class="toggle_button">
        <span class="bar"></span>
@@ -56,10 +56,10 @@
  
  <section class="about-long">
   <div class="text-container">
+    <h2><em>Long story short ...</em></h2>
     <br>
     <br>
-    <br>
-   <p>Hey, schön das du den Weg auf meine Seite gefunden hast und noch ein wenig mehr über mich erfahren möchtest!</p> <br>
+   <p>Hey, schön das du noch ein wenig mehr über mich erfahren möchtest!</p> <br>
 
    <p>Ich bin gelernte Medientechnologin Druck mit Schwerpunkt Offsetdruck, habe mich aber mittlerweile auf die Frontend-Webentwicklung spezialisiert.</p> <br>
    <p>In meinem letzten Beruf bei T.A.P.E MUZIK, einem Unternehmen, das sich auf die Produktion von Kassetten spezialisiert hat, war ich für den UV-Druck und die Kundenkommunikation zuständig. Außerdem habe ich mich um die Erstellung von Soft- und Hardproofs gekümmert und dabei wertvolle Erfahrungen gesammelt. Dort begann ich auch, mich um die Webseite des Unternehmens zu kümmern, was mein Interesse an der Webentwicklung weckte und mich dazu brachte, mich in diesem Bereich weiterzubilden.</p> <br>
@@ -71,10 +71,10 @@
    
   </div>
   <div class="img-container">
-    <img src="bilder/Portrai.png" alt="Portrai">
-    <div class="buttons">
-      <button><a href="contact.html">Contact</a></button>
-      <button><a href="portfolio.html">Portfolio</a></button>
+    <img src="bilder/Portrai.png" alt="Portrai Foto von Anne Dalchow">
+    <div class="button-container-dark-background">
+      <a href="contact.html"><button>Contact</button></a>
+      <a href="portfolio.html"><button>Portfolio</button></a>
     </div>
   </div>
  </section>
