--- a/bmi-rechner.html
+++ b/bmi-rechner.html
@@ -12,7 +12,7 @@
   <!--------HEADER-------------------------->
 <header> 
   <nav>
-    <label class="logo"><a href="index.html"><img src="bilder/minimize/Logo_Anne-01.svg" alt="Logo Anne Dalchow"></a></label>
+    <label class="logo"><a href="index.html"><img src="bilder/minimize/Logo_Anne-01.svg" alt="Logo Anne Dalchow führt zur Landingpage"></a></label>
     <input type="checkbox" id="toggle_button">
     <label for="toggle_button" class="toggle_button">
       <span class="bar"></span>
@@ -66,7 +66,7 @@
     </div>
   
     <div  class="img-category">
-      <img id="bmi-img" src="bilder/bmi-st-1326844049.png" alt="Bmi Kategorien Übersicht">
+      <img id="bmi-img" src="bilder/bmi-st-1326844049.png" alt="Bmi Kategorien Übersicht Bild Illustration">
     </div>
   
     <button id="reload-button">Neu laden</button>
