--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
  <!--------HEADER-------------------------->
  <header> 
   <nav>
-   <label class="logo"><a href="index.html"><img src="bilder/minimize/Logo_Anne-01.svg" alt="Logo Anne Dalchow"></a></label>
+   <label class="logo"><a href="index.html"><img src="bilder/minimize/Logo_Anne-01.svg" alt="Logo Anne Dalchow führt zur Landingpage"></a></label>
    <input type="checkbox" id="toggle_button">
    <label for="toggle_button" class="toggle_button">
        <span class="bar"></span>
@@ -66,8 +66,7 @@
        Klemmstraße 8 <br>
        04277 Leipzig <br>
        <br>
-       Telefon: +49 177 344 79 73 <br>
-       E-Mail: anne.dalchow@web.de <br>
+       E-Mail: contact@anne-dalchow.de <br>
     </p>
     <br>
     <div class="link-icons">
