--- a/project-illustration.html
+++ b/project-illustration.html
@@ -12,7 +12,7 @@
  <!--------HEADER-------------------------->
  <header> 
   <nav>
-   <label class="logo"><a href="index.html"><img src="bilder/minimize/Logo_Anne-01.svg" alt="Logo Anne Dalchow"></a></label>
+   <label class="logo"><a href="index.html"><img src="bilder/minimize/Logo_Anne-01.svg" alt="Logo Anne Dalchow führt zur Landingpage"></a></label>
    <input type="checkbox" id="toggle_button">
    <label for="toggle_button" class="toggle_button">
        <span class="bar"></span>
@@ -65,58 +65,60 @@
   <div id="wrapper-project-work">
     <section class="project-work-first-section">
       <div class="project-work-img">
-        <img src="/bilder/graphics-first_Zeichenfläche 1.png" alt="Mockup Webdesign auf unterschiedlichen Geräten" width="auto" height="auto">
+        <img src="/bilder/graphics-first_Zeichenfläche 1.png" alt="Vorschau von drei Illustrationen" width="auto" height="auto">
       </div>
       <div class="project-text-container-prints">
               <div class="text-container-prints-first-section">
                 <h2>Graphic Design</h2>
                 <br>
-                <p>Möchtest du lieber eine Illustration, eine Zeichnung oder die Bearbeitung eines Fotos? Hier findest du eine Auswahl meiner aktuellen Projekte in diesen Bereichen. <br>
+                <p>Illustrationen, Fotobearbeitung, Zeichnungen und Animationen - Hier findest du eine Auswahl meiner aktuellen Projekte in diesen Bereichen. <br>
                   Besondere Vorlieben habe ich hierbei für Schraffurtechniken, naturnahen Themen, organischen Strukturen und einem gewissem Minimalismus (Flat Design).</p> 
                 <hr> <br>
-                <p>Umgesetzung: Adobe Illustrator, Adobe Photoshop</p>
+                <p>Tools: Adobe Illustrator, Adobe Photoshop, Spline, SVGator</p>
               </div>
       </div>
     </section>
 
-    <div class="row-illustration"> 
-      <div class="column-illustration">
-        <img src="/bilder/Galerie/Illu_Sonne.png">
-       <img src="/bilder/Galerie/Autumn_Illu_500x700.png">
-       <img src="/bilder/Galerie/Hike_Box_Zeichenfläche 1.png">
-       <img src="/bilder/Galerie/nerd_ypsilon_vs3.png" >
-       <img src="/bilder/Galerie/Poster.png">
-       <img src="/bilder/Galerie/Frau_Illustration_Zeichenfläche 1.png">
+    <div class="illustration-container">
+      <h3>Animation</h3>
+      <img src="" alt="">
+      <img src="" alt="">
+    </div>
 
-
+    <div class="illustration-container">
+      <h3>Graphics</h3>
+      <div class="row-illustration">
+        <div class="column-illustration">
+          <img src="/bilder/Galerie/Illu_Sonne.png" alt="Vektorillustration einer Berglandschaft mit Planeten bei Nacht">
+         <img src="/bilder/Galerie/Autumn_Illu_500x700.png" alt="Vektorillustration einer herbstlichen Naturlandschaft mit zwei Bäumen, Gräsern, Bergen und einem Vogel links">
+         <img src="/bilder/Galerie/Hike_Box_Zeichenfläche 1.png" alt="Vektorillustration Berglandschaft bei Sonnenuntergang und leicht bewölkt. Im Vordergrund ist eine Bergsteigerin, die auf einem Hügel steht und den Ausblick genießt">
+         <img src="/bilder/Galerie/nerd_ypsilon_vs3.png" alt="Vektorillustration eines Astronauten für ein Youtube Kanal. Umrahmt ist er von einem lila rosa Dreieck und im Hintergrund ist ein Sternenhimmel">
+         <img src="/bilder/Galerie/Poster.png" alt="Minimalistische Illustration von Kreisen, Strichen und einer Rasterfüllung der Kreise">
+         <img src="/bilder/Galerie/Frau_Illustration_Zeichenfläche 1.png" alt="Vektorillustration einer Frau bis zur Brust. Sie trägt einen Dutt, hat braune Haare, einen goldenen Dreiecksohring und rosige Wangen. Sie lächelt und schaut nach rechts. Umrahmt ist sie von ein paar Blättern und einem Kreis">
+        </div>
+        <div class="column-illustration">
+         <img src="/bilder/Galerie/Illu_Welt.png" alt="Schraffurzeichnung einer Weltkugel mit türkisem Wasser. Einige Stücke von der Welt lösen sich ab. Die Weltkugel ist in einem Polygon-Glas-Käfig">
+         <img src="/bilder/Galerie/Mensch Farbe.png" alt="Schraffurzeichnung eines sehr hageren Menschen, welcher die rechte Hand nach vorne zeigt. In der Handfläche ist ein Auge, womit er schauen kann. Denn sein Gesicht ist eine Weltkugel, die Verbunden ist mit einem Stück Stoff.Seine Haare sind zwei Tentakel die sich um den Kopf ranken.">
+         <img src="/bilder/Galerie/obst_zeichnungen-01.png" alt="Schraffurzeichnung von Obst und Gemüse mit Gesichtern, die sehr fröhlich schauen. Kindliche Darstellung von Obst und Gemüse">
+         <img src="/bilder/Galerie/FB_IMG_1555167081715.jpg" alt="Schraffurzeichnung zweier Hände, die die Weltkugel in der Mitte auseinander ziehen. Darin sind Zahnräder und ein Strudel">
+         <img src="/bilder/Galerie/zeichnung1.png" alt="Schraffurzeichnung einer geometrischen Form. Abstrakte darstellung eines organischen Wesens.">
+        </div>
+        <div class="column-illustration">
+          <img src="/bilder/Galerie/neon_light_effect.png" alt="Bildbearbeitung einer Frau die ein neon Effekt um ihren Kopf hat. Farbänderung in ein lila blauen Ton." >
+          <img src="/bilder/Galerie/schwebendeInseln.png" alt="Bildcomposition schwebender Inseln die von Wolken umschlungen sind und durch Ranken miteinander verknüpft sind">
+          <img src="/bilder/Galerie/Glühmond.png" alt="Bildcomposition ein Mond in einer Glühbirne liegt auf dem Boden. Ein Mensch, kleiner als die Glühbirne steht daneben und schaut in den Himmel">
+          <img src="/bilder/Galerie/Tag und Nacht_abgeschlossen.png" alt="Bildbearbeitung einer Nachtszene. Ein Bully fährt eine Straße in einer Gebirgslandschaft entlang." >
+          <img src="/bilder/Galerie/Vektorstyle.png" alt="Fotobearbeitung einer Frau im Vektorstil.">
+          <img src="/bilder/Galerie/Blume_Zeichenfläche 1.png" alt="Abstrakte Illustration und 3D darstellung einer Blume">
+          <img src="/bilder/Galerie/Motte.png" alt="Digitale Zeichnung einer Motte">
+        </div>
       </div>
-      <div class="column-illustration">
-       <img src="/bilder/Galerie/Illu_Welt.png">
-       <img src="/bilder/Galerie/Mensch Farbe.png">
-
-       <img src="/bilder/Galerie/obst_zeichnungen-01.png">
-       <img src="/bilder/Galerie/FB_IMG_1555167081715.jpg">
-       <img src="/bilder/Galerie/zeichnung1.png">
-
-
-
-      </div>  
-      <div class="column-illustration">
-        <img src="/bilder/Galerie/neon_light_effect.png" >
-        <img src="/bilder/Galerie/schwebendeInseln.png" >
-        <img src="/bilder/Galerie/Glühmond.png">
-        <img src="/bilder/Galerie/Tag und Nacht_abgeschlossen.png" >
-        <img src="/bilder/Galerie/Vektorstyle.png" >
-
-        <img src="/bilder/Galerie/Blume_Zeichenfläche 1.png">
-        <img src="/bilder/Galerie/Motte.png">
-      </div>
-    </div>     
+    </div>
    
     
   <div class="pre-back-buttons">
-    <button><a href="project-prints.html">&#129092; Prints</a></button>
-    <button><a href="portfolio.html">Overview &#129094;</a></button>
+    <a href="project-prints.html"><button>&#129092; Prints</button></a>
+    <a href="portfolio.html"><button>Overview &#129094;</button></a>
   </div>
 </main>
   
