--- a/project-webdesign.html
+++ b/project-webdesign.html
@@ -13,7 +13,7 @@
  <!--------HEADER-------------------------->
  <header> 
   <nav>
-   <label class="logo"><a href="index.html"><img src="bilder/minimize/Logo_Anne-01.svg" alt="Logo Anne Dalchow"></a></label>
+   <label class="logo"><a href="index.html"><img src="bilder/minimize/Logo_Anne-01.svg" alt="Logo Anne Dalchow führt zur Landingpage"></a></label>
    <input type="checkbox" id="toggle_button">
    <label for="toggle_button" class="toggle_button">
        <span class="bar"></span>
@@ -66,7 +66,7 @@
   <div id="wrapper-project-work">
     <section class="project-work-first-section">
       <div class="project-webdesign-img">
-        <img src="bilder/laptop_blur_laptop_blur_lila.svg" alt="Mockup Webdesign auf unterschiedlichen Geräten"  >
+        <img src="bilder/laptop_blur_laptop_blur_lila.svg" alt="3D Illustration von einem Laptop und einem Handy"  >
       </div>
       
       <div class="project-text-container-webdesign">
@@ -86,7 +86,7 @@
                 <h2>02</h2>
               </div>
               <div>
-                <h2>Webdesign & Animations</h2>
+                <h2>Webdevolopment</h2>
               </div>
             </div>
           </a>
@@ -129,13 +129,13 @@
         </p>
       </div> 
       <div class="webdesign-img-container">
-        <a href="mindfulApp.html"><img src="bilder/prototyp_ansichtquer_Zeichenfläche 1.png" alt="Vorschau BMI Rechner App"></a>
+        <a href="mindfulApp.html"><img src="bilder/prototyp_ansichtquer_Zeichenfläche 1.png" alt="Vorschaubild der Prototypen App Mindful Path. Führt zur Projektvorstellung des Prototypen"></a>
       </div>
     </section>
   
     <section class="webdesign-projekte" id="webdesign">
       <div class="webdesign-text-container">
-        <h4>Projekt 2: Webdesign & Animations</h4> <br>
+        <h4>Projekt 2: Webdevolopment</h4> <br>
         <p>
           Beschreibung: Hier geht es um meine Webseitenstrukturierung, dem responsivem Design und wichtigen Grundlagen bezüglich SEO und Accessibility. Zudem Darstellung von Animationen die einerseits mit JavaScript & CSS erstellt wurden. Und anderseits sich mit folgenden Designprogrammen ( SVGator und Spline) erstellen lassen.
            <br> <br>
@@ -144,7 +144,7 @@
         </p>
       </div>
       <div class="webdesign-img-container">
-        <a href="todo-app.html"><img src="bilder/spline_roboter_Zeichenfläche 1.svg" alt="Vorschau ToDo App"></a>
+        <a href="todo-app.html"><img src="bilder/spline_roboter_Zeichenfläche 1.svg" alt="Vorschaubild für Webdevolopment. Führt zur Projektvorstellung Webdevelopment"></a>
       </div>
     </section>
 
@@ -158,7 +158,7 @@
         </p>
       </div>
       <div class="webdesign-img-container">
-        <a href="js-anwendungen.html"><img src="bilder/mockups js_gesamt_Zeichenfläche 1.png" alt="Vorschau BMI Rechner App"></a>
+        <a href="js-anwendungen.html"><img src="bilder/mockups js_gesamt_Zeichenfläche 1.png" alt="Vorschaubild für JavaScript Anwendungen. Führt zur Seite JavaScript Anwendungen"></a>
       </div>
     </section>
 
@@ -173,14 +173,14 @@
         </p>
        </div>
        <div class="webdesign-img-container">
-        <a href="project-wordpress.html"><img src="bilder/wordpress_mockup_klein.png" alt="Vorschau BMI Rechner App"></a>
+        <a href="project-wordpress.html"><img src="bilder/wordpress_mockup_klein.png" alt="Vorschaubild für WordPress. Führt zur Projektvorstellung eines Möbelshops welches mit Wordpress erstellt wurde"></a>
       </div>
     </section>
   </div> 
     
   <div class="pre-back-buttons">
-    <button><a href="portfolio.html">&#129092; Overview</a></button>
-    <button><a href="project-prints.html">Prints &#129094;</a></button>
+    <a href="portfolio.html"><button>&#129092; Overview</button></a>
+    <a href="project-prints.html"><button>Prints &#129094;</button></a>
   </div>
 
   </main>
