--- a/project-website.html
+++ b/project-website.html
@@ -8,6 +8,7 @@
  <link href="css/style.css" rel="stylesheet" media="all">
  <link rel="stylesheet" href="css/wordpress.css" media="all">
  <link rel="preload" fetchpriority="high" as="image" href="bilder/hero-dark.png" type="image/webp">
+
 </head>
 
 <body>
@@ -51,7 +52,7 @@
   </ul>
   <section id="site-hero-dark">
     <div class="inside">
-      <h1>Web Design & Animation</h1>
+      <h1>Webdevolopment</h1>
       <hr>
       <div class="dropdown-projectsites">
         <button class="dropbtn">Overview <i class="fa-solid fa-caret-down"></i></button>
@@ -65,31 +66,24 @@
     </div>
   </section>
 
-  <div id="wrapper-project-appdesign">
-    <section class="project-appdesign-first-section">
-      <div class="project-appdesign-img">
+  <div id="wrapper-project-webdev">
+    <section class="project-webdev-first-section">
+      <div class="project-webdev-img">
         <img src="/bilder/wordpress/Mockup_alle Geräte_oh.png" alt="Mockup WordPress Seite auf unterschiedlichen Geräten" width="100%" height="auto">
       </div>
-      <div class="project-text-container-appdesign">
-        <h2>Web Design & Animation</h2>
-        <p><span class="smallCaps">Responsiv Design | Assesebillty | Seo | Animation</span></p>
+      <div class="project-text-container-webdev">
+        <h2>Webdevolopment</h2>
+        <p><span class="smallCaps">Responsiv Design | Assesebillty | Seo</span></p>
         <br> <br>
 
         <p>Im Rahmen meiner Weiterbildung habe ich diese Portfolio Seite aufgebaut und möchte dir hier einige ausgewählte Funktionen genauer erklären.<br>
-         Insbesondere geht es hier um das responsiv Design, Barrierefreiheit, Seo und erstellte Animationen auf Basis von JavaScript & CSS und 3D Animationen mit Spline und SVGator.
+         Insbesondere geht es hier um das responsiv Design, Barrierefreiheit, Seo und erstellte Animationen auf Basis von JavaScript & CSS.
         </p>
 
 
 
        <div class="assets-plugins">
         <p>Genutzte Tools:</p>
-        <div>
-         <p>
-          Figma<br>
-          SVGator <br>
-          Spline
-        </p>
-        </div>
         <div>
          <p>
           Browser Entwicklerkonsole (Chrome, Firefox) <br>
@@ -100,6 +94,8 @@
          </p>
         </div>
 
+        <img src="/bilder/webdev quadrate seo_klein_Zeichenfläche 1 Kopie.png" alt="">
+
        </div>
 
      </div>
@@ -109,7 +105,7 @@
     <section class="assets">
      <h3>Responsiv Design</h3>
      <hr>
-     <div class="assets-interaction-cart">
+     <div class="assets-textfield">
       <div>
        <h4>'Mobil-First'</h4>
        <p>
@@ -117,7 +113,7 @@
         Dies erhöhte auch die Relevanz des responsiven Designs. <br>
         Auch angesichts der vergangenen Ankündigung von Google, dass ab dem 5. Juli 2023 nur noch ein Mobile Googlebot zur Untersuchung von Websites verwendet werden soll, stellt die Mobile-First-Indexierung und responsive Darstellung in den Mittelpunkt. <br></p>
 
-        <p><span class="p-color">Doch was ist eigentlich responsiv Design ?</span><br>
+        <p><span class="p-color">Doch was ist eigentlich responsiv Design?</span><br>
          Responsive Webdesign bezieht sich auf die Fähigkeit einer Website, sich nahtlos an verschiedene Bildschirmgrößen und Geräte anzupassen. Dies bedeutet, dass die Website nicht nur auf einem Desktop-Computer gut funktioniert und ansprechend aussieht, sondern auch auf verschiedenen Smartphones oder Tablets. </p>
 
         <p>
@@ -128,7 +124,7 @@
 
        <p><span class="p-color">Wie habe ich dies umgesetzt? </span><br>
         Ich habe für meine Webseite und kleinen Anwendungen flexible Layouts (Flex & Grid), CSS-Media-Queries und angepasste Mediendateien verwendet. <br>
-        Zur Hilfe nutzte ich dafür die Chrome Entwicklerkonsole und die Chrome Erweiterung: Responsiv-Viewer. Damit ließ sich problemlos jedes Device und mögliche Komplikationen ermitteln.</p>
+        Zur Hilfe nutzte ich dafür die Chrome Entwicklerkonsole und die Chrome Erweiterung: Responsiv-Viewer. Damit ließ sich problemlos jedes Device darstellen und mögliche Komplikationen ermitteln.</p>
       </div>
  
       <div>
@@ -145,7 +141,7 @@
    <section class="assets">
     <h3>Barrierefreiheit | Seo</h3>
     <hr>
-    <div class="assets-interaction-cart">
+    <div class="assets-textfield">
 
      <div>
       <h4>Barrierefreiheit</h4>
@@ -195,7 +191,7 @@
 
    <section class="assets">
     <div class="assets-headline">
-     <h3>Animation JS & CSS</h3>
+     <h3>Animation</h3>
     </div>
     <hr>
 
@@ -225,32 +221,9 @@
     </div>
    </section>
 
-   <section class="assets">
-    <h3>3D Animationen</h3>
-    <hr>
-
-    <div class="assets-interaction">
-     <div>
-      <img src="bilder/wordpress/Seiten zusammengefügt-06.png" alt="#" width="100%" height="auto">
-      <p>Zusammenfassung der Bestellung</p>
-     </div>
-
-     <div>
-      <img src="bilder/wordpress/Seiten zusammengefügt_Bestellbestätigung Käufer-07.png" alt="#" width="100%" height="auto">
-      <p>Bestellbestätigung für Käufer*in</p>
-     </div>
-
-     <div>
-      <img src="bilder/wordpress/Seiten zusammengefügt_Bestellbestätigung Verkäufer.png" alt="#"width="100%" height="auto">
-      <p>Bestellinfo für Verkäufer*in</p>
-     </div>
-
-    </div>
-   </section>
-
    <div class="pre-back-buttons">
-    <button><a href="project-webdesign.html">&#129092; Webdesign </a></button>
-    <button><a href="portfolio.html">Overview &#129094;</a></button>
+    <a href="project-webdesign.html"><button>&#129092; Webdesign </button></a>
+    <a href="portfolio.html"></a><button>Overview &#129094;</button></a>
   </div>
 
 </main>
