--- a/project-wordpress.html
+++ b/project-wordpress.html
@@ -6,15 +6,16 @@
  <title>Anne Dalchow - WordPress</title>
  <meta name="description" content="Anne Dalchow - Portfolio Webdesign WordPress WooCommerce Shopsystem">
  <link href="css/style.css" rel="stylesheet" media="all">
- <link rel="stylesheet" href="css/wordpress.css" media="all">
+ <link rel="stylesheet" href="css/appdesign.css" media="all">
  <link rel="preload" fetchpriority="high" as="image" href="bilder/hero-dark.png" type="image/webp">
+
 </head>
 
 <body>
  <!--------HEADER-------------------------->
  <header> 
   <nav>
-   <label class="logo"><a href="index.html"><img src="bilder/minimize/Logo_Anne-01.svg" alt="Logo Anne Dalchow"></a></label>
+   <label class="logo"><a href="index.html"><img src="bilder/minimize/Logo_Anne-01.svg" alt="Logo Anne Dalchow führt zur Landingpage"></a></label>
    <input type="checkbox" id="toggle_button">
    <label for="toggle_button" class="toggle_button">
        <span class="bar"></span>
@@ -65,12 +66,12 @@
     </div>
   </section>
 
-  <div id="wrapper-project-appdesign">
-    <section class="project-appdesign-first-section">
-      <div class="project-appdesign-img">
-        <img src="/bilder/wordpress/Mockup_alle Geräte_oh.png" alt="Mockup WordPress Seite auf unterschiedlichen Geräten" width="100%" height="auto">
+  <div id="wrapper-project-wordpress">
+    <section class="project-wordpress-first-section">
+      <div class="project-wordpress-img">
+        <img src="/bilder/wordpress/Mockup_alle Geräte_oh.png" alt="Mockup WordPress Möbelshop Seite auf unterschiedlichen Geräten" width="100%" height="auto">
       </div>
-      <div class="project-text-container-appdesign">
+      <div class="project-text-container-wordpress">
         <h2>Wordpress Shop</h2>
         <p><span class="smallCaps">Shopsystem | WooCommerce | Elementor</span></p>
         <br> <br>
@@ -118,7 +119,7 @@
       <img id="lightbox-image" src="" alt="Lightbox Image">
     </div>
      
-     <div class="assets-interaction">
+     <div class="assets-description-container">
 
       <div>
        <img src="bilder/wordpress/Seiten zusammengefügt_Zeichenfläche 1.png" alt="Landingpage Möbel Shop" width="100%" height="auto" onclick="openLightbox('bilder/wordpress/Seiten zusammengefügt_Zeichenfläche 1.png')" id="lightbox-img">
@@ -126,12 +127,12 @@
       </div>
 
       <div >
-        <img src="bilder/wordpress/Seiten zusammengefügt-02.png" alt="#" width="100%" height="auto" onclick="openLightbox('bilder/wordpress/Seiten zusammengefügt-02.png')" id="lightbox-img">
+        <img src="bilder/wordpress/Seiten zusammengefügt-02.png" alt="Möbelshop Seite Ansicht aller Produkte, mit Preisauszeichnungen und die Möglichkeit sie dem Warenkorb hinzuzufügen. Zu sehen sind Bilder von Betten, Kerzen, Stühlen, Tischen, Pflanzen, Deko, und Kerzen" width="100%" height="auto" onclick="openLightbox('bilder/wordpress/ansicht_allerProdukte.png')" id="lightbox-img" width="1400px">
        <p class="img-description">Ansicht aller Produkte mit Preisauszeichnung und Möglichkeit sie dem Warenkorb hinzuzufügen</p>
       </div>
 
       <div>
-       <img src="bilder/wordpress/Seiten zusammengefügt-03.png" alt="#"width="100%" height="auto" onclick="openLightbox('bilder/wordpress/Seiten zusammengefügt-03.png')" id="lightbox-img">
+       <img src="bilder/wordpress/Seiten zusammengefügt-03.png" alt="Möbelshop Produktseite eines Bettes: Bild von dem Bett, Produktbeschreibung, Zahlungsarten und Verlinkungen zu Produkten, die den Käufer*innen ebenfalls gefallen könnten"width="100%" height="auto" onclick="openLightbox('bilder/wordpress/Seiten zusammengefügt-03.png')" id="lightbox-img">
        <p class="img-description">Produktseite: Produktbeschreibung, Zahlungsarten und Verlinkungen zu Produkten, die den Käufer*innen ebenfalls gefallen könnten</p>
       </div>
 
@@ -145,12 +146,12 @@
     <div class="assets-interaction-cart">
 
      <div>
-       <img src="bilder/wordpress/Seiten zusammengefügt-04.png" alt="#" width="100%" height="">
+       <img src="bilder/wordpress/Seiten zusammengefügt-04.png" alt="Möbelshop Seite Ansicht: Hinweis Produkt wurde dem Warenkorb hinzugefügt mit einem grünem Textfeld" width="100%" height="">
        <p class="img-description">Hinweis Produkt wurde dem Warenkorb hinzugefügt</p>
      </div>
 
      <div>
-       <img src="bilder/wordpress/Seiten zusammengefügt_Bestellbestätigung Käufer-05.png" alt="#" width="100%" height="">
+       <img src="bilder/wordpress/Seiten zusammengefügt_Bestellbestätigung Käufer-05.png" alt="Warenkorb Ansicht mit: Produktauflistung, Kurzbeschreibung und Produktbild von dem Bett welches dem Warenkorb hinzugefügt wurde, Mehrwertsteuer (je nach Land) und Versandkosten" width="100%" height="">
        <p class="img-description">Warenkorb Ansicht mit: Produktauflistung, Mehrwertsteuer (je nach Land) und Versandkosten</p>
      </div>
      
@@ -163,17 +164,17 @@
 
     <div class="assets-interaction-cart">
      <div>
-      <img src="bilder/wordpress/WooCommerce Backend_Steuersätze.png" alt="#" width="100%" height="auto">
+      <img src="bilder/wordpress/WooCommerce Backend_Steuersätze.png" alt="Backend Einstellung bei WooCommerce der Steuersätze EU" width="100%" height="auto">
       <p class="img-description">Steuersätze</p>
      </div>
 
      <div>
-      <img src="bilder/wordpress/WooCommerce Backend_Versandzonen.png" alt="#" width="100%" height="auto">
+      <img src="bilder/wordpress/WooCommerce Backend_Versandzonen.png" alt="Backend Einstellung bei WooCommerce der Versandzonen. Deutschland und Europa" width="100%" height="auto">
       <p class="img-description">Versandzonen</p>
      </div>
 
      <div>
-      <img src="bilder/wordpress/WooCommerce Backend_Versandklassen.png" alt="#" width="100%" height="auto">
+      <img src="bilder/wordpress/WooCommerce Backend_Versandklassen.png" alt="Backend Einstellung bei WooCommerce der Versandklassen fragil und Sperrgut." width="100%" height="auto">
       <p class="img-description">Versandklassen</p>
      </div>
 
@@ -184,19 +185,19 @@
     <h3>Bestellvorgang</h3>
     <hr>
 
-    <div class="assets-interaction">
+    <div class="assets-description-container">
      <div>
-      <img src="bilder/wordpress/Seiten zusammengefügt-06.png" alt="#" width="100%" height="auto">
+      <img src="bilder/wordpress/Seiten zusammengefügt-06.png" alt="Darstellung der Ansicht, wenn die Bestellung abgeschlossen wurde" width="100%" height="auto">
       <p class="img-description">Zusammenfassung der Bestellung</p>
      </div>
 
      <div>
-      <img src="bilder/wordpress/Seiten zusammengefügt_Bestellbestätigung Käufer-07.png" alt="#" width="100%" height="auto">
+      <img src="bilder/wordpress/Seiten zusammengefügt_Bestellbestätigung Käufer-07.png" alt="Bestellbestätigung für Käufer*in mit Aufzählung der Produkte, Steuer, Versandkosten, Zahlungsmethode, Rechnungsadresse, Lieferadresse und der AGBs" width="100%" height="auto">
       <p class="img-description">Bestellbestätigung für Käufer*in</p>
      </div>
 
      <div>
-      <img src="bilder/wordpress/Seiten zusammengefügt_Bestellbestätigung Verkäufer.png" alt="#"width="100%" height="auto">
+      <img src="bilder/wordpress/Seiten zusammengefügt_Bestellbestätigung Verkäufer.png" alt="Bestellinformation für Verkäufer*in. Bestellnummer einsehbar, Datum der Bestellung. Produktauflistung, Zahlungsmethode, Steuer, Gesamtkosten und Versandkosten"width="100%" height="auto">
       <p class="img-description">Bestellinfo für Verkäufer*in</p>
      </div>
 
@@ -204,8 +205,8 @@
    </section>
 
    <div class="pre-back-buttons">
-    <button><a href="project-webdesign.html">&#129092; Webdesign </a></button>
-    <button><a href="portfolio.html">Overview &#129094;</a></button>
+    <a href="project-webdesign.html"><button>&#129092; Webdesign </button></a>
+    <a href="portfolio.html"><button>Overview &#129094;</button></a>
   </div>
 
 </main>
