--- a/js-anwendungen.html
+++ b/js-anwendungen.html
@@ -12,7 +12,7 @@
  <!--------HEADER-------------------------->
  <header> 
   <nav>
-   <label class="logo"><a href="index.html"><img src="bilder/minimize/Logo_Anne-01.svg" alt="Logo Anne Dalchow"></a></label>
+   <label class="logo"><a href="index.html"><img src="bilder/minimize/Logo_Anne-01.svg" alt="Logo Anne Dalchow führt zur Landingpage"></a></label>
    <input type="checkbox" id="toggle_button">
    <label for="toggle_button" class="toggle_button">
        <span class="bar"></span>
@@ -115,7 +115,7 @@
        </p>
       </div>
       <div class="webdesign-img-container">
-       <a href="todo-app.html"><img src="bilder/todo app.png" alt="Vorschau BMI Rechner App"></a>
+       <a href="todo-app.html"><img src="bilder/todo app.png" alt="Vorschaubild der ToDo App. Führt zu der Anwendung To Do Liste"></a>
        <div style="margin-top: 10px;">
         <p style="color: whitesmoke; text-align: right;">Code on <a href="https://github.com/anne-dalchow/todo-App.git "style="color: rgb(204, 175, 102);">Github</a></p>
        </div>
@@ -133,7 +133,7 @@
        </p>
      </div>
      <div class="webdesign-img-container">
-       <a href="bmi-rechner.html"><img src="bilder/BMI Rechner.png" alt="Vorschau BMI Rechner App"></a>
+       <a href="bmi-rechner.html"><img src="bilder/BMI Rechner.png" alt="Vorschaubild BMI Rechner App. Führt zu der Anwendung BMI Rechner "></a>
        <div style="margin-top: 10px;">
         <p style="color: whitesmoke; text-align: left;">Code on <a href="https://github.com/anne-dalchow/bmi-rechner.git" style="color: rgb(204, 175, 102);">Github</a></p>
        </div>
@@ -152,7 +152,7 @@
        </p>
       </div>
       <div class="webdesign-img-container">
-       <a href="/shooter-js/space-shooter.html"><img src="bilder/space_shooter.png" alt="Vorschau Space Shooter Spiel"></a>
+       <a href="/shooter-js/space-shooter.html"><img src="bilder/space_shooter.png" alt="Vorschau Space Shooter Spiel. Führt zu der Seite mit dem Spiel Space Shooter."></a>
        <div style="margin-top: 10px;">
         <p style="color: whitesmoke; text-align: right;">Code on <a href="https://github.com/anne-dalchow/Space-Shooter-Game-2D.git" style="color: rgb(204, 175, 102);">Github</a></p>
        </div>
@@ -161,8 +161,8 @@
 
     
   <div class="pre-back-buttons">
-    <button><a href="project-webdesign.html">&#129092; Webdesign </a></button>
-    <button><a href="portfolio.html">Overview &#129094;</a></button>
+    <a href="project-webdesign.html"><button>&#129092; Webdesign </button></a>
+    <a href="portfolio.html"><button>Overview &#129094;</button></a>
   </div>
 
   </main>
