--- a/mindfulApp.html
+++ b/mindfulApp.html
@@ -14,7 +14,7 @@
  <!--------HEADER-------------------------->
  <header> 
   <nav>
-   <label class="logo"><a href="index.html"><img src="bilder/minimize/Logo_Anne-01.svg" alt="Logo Anne Dalchow"></a></label>
+   <label class="logo"><a href="index.html"><img src="bilder/minimize/Logo_Anne-01.svg" alt="Logo Anne Dalchow führt zur Landingpage"></a></label>
    <input type="checkbox" id="toggle_button">
    <label for="toggle_button" class="toggle_button">
        <span class="bar"></span>
@@ -68,7 +68,7 @@
   <div id="wrapper-project-appdesign">
     <section class="project-appdesign-first-section">
       <div class="project-appdesign-img">
-        <img src="/bilder/Prototypen Handy-01.png" alt="Mockup Webdesign auf unterschiedlichen Geräten" width="auto" height="auto">
+        <img src="/bilder/Prototypen Handy-01.png" alt="3D Grafik von zwei Handys" width="auto" height="auto">
       </div>
       <div class="project-text-container-appdesign">
         <h2>Mindful Path</h2>
@@ -98,7 +98,7 @@
       </div>
       <div class="project-appdesign-description">
         <div class="project-appdesign-inside">
-          <img src="bilder/zielgruppe.svg" alt="Perspektivendefinition Zielorientierung Organisation der Teamarbeit Zeichentrickfiguren">
+          <img src="bilder/zielgruppe.svg" alt="Illustration mit einer Zielscheibe, einem Pfeil der in der Mitte der Zielscheibe steckt und drei Personen die darauf deuten, oder hinschauen">
           <p style="text-align: center; font-size: 0.8rem; color: rgb(183, 183, 183);">Bild von <a href="https://de.freepik.com/vektoren-kostenlos/personalmanagement-perspektivendefinition-zielorientierung-organisation-der-teamarbeit-business-coach-geschaeftsfuehrer-und-personal-zeichentrickfiguren_12084748.htm#query=ziel&position=7&from_view=keyword&track=ais_user&uuid=bf882623-060b-41ed-a766-95b5bbbff2fe" style="color: var(--secondcolor);font-size: 0.8rem;">vectorjuice</a> auf Freepik</p>
         </div>
       </div>
@@ -223,20 +223,20 @@
     <hr>
 
     <div class="assets-interaction">
-      <div><img src="bilder/AppDesign1.png" alt="#" width="260px" height="auto"></div>
-      <div><img src="bilder/AppDesign2.png" alt="#" width="260px" height="auto"></div>
-      <div><img src="bilder/AppDesign3.png" alt="#"width="260px" height="auto"></div>
+      <div><img src="bilder/AppDesign1.png" alt="Prototyp App Darstellung als App für ein Smartphone. Ansicht der Landingpage" width="260px" height="auto"></div>
+      <div><img src="bilder/AppDesign2.png" alt="Prototyp App Darstellung als App für ein Smartphone. Ansicht der To Do Listen Seite für einen Wochentag" width="260px" height="auto"></div>
+      <div><img src="bilder/AppDesign3.png" alt="Prototyp App Darstellung als App für ein Smartphone. Ansicht der Kategorie Seite"width="260px" height="auto"></div>
       <div class="assets-interaction-figma-presentation">
         <p>Du bist neugierig geworden und möchtest dir einen eigenen Eindruck von meinem Prototypen machen? <br> <br>
         Dann sende mir eine E-Mail mit einer kurzen Nachricht. <br>Nach meiner Freischaltung kannst du über den Button unterhalb zu meinem Projekt gelangen.</p>
-        <button><a href="https://www.figma.com/proto/kvcCFtU7xMqExpHbsnsAzE/App-Mindful-path" target="_blank">Open in Figma</a></button>
+        <a href="https://www.figma.com/proto/kvcCFtU7xMqExpHbsnsAzE/App-Mindful-path" target="_blank" class="button-container-dark-background"><button>Open in Figma</button></a>
       </div>
     </div>
    </section>
 
    <div class="pre-back-buttons">
-    <button><a href="project-webdesign.html">&#129092; Webdesign </a></button>
-    <button><a href="portfolio.html">Overview &#129094;</a></button>
+    <a href="project-webdesign.html"><button>&#129092; Webdesign </button></a>
+    <a href="portfolio.html"><button>Overview &#129094;</button></a>
   </div>
 </main>
   
