--- a/project-prints.html
+++ b/project-prints.html
@@ -12,7 +12,7 @@
  <!--------HEADER-------------------------->
  <header> 
   <nav>
-   <label class="logo"><a href="index.html"><img src="bilder/minimize/Logo_Anne-01.svg" alt="Logo Anne Dalchow"></a></label>
+   <label class="logo"><a href="index.html"><img src="bilder/minimize/Logo_Anne-01.svg" alt="Logo Anne Dalchow führt zur Landingpage"></a></label>
    <input type="checkbox" id="toggle_button">
    <label for="toggle_button" class="toggle_button">
        <span class="bar"></span>
@@ -65,7 +65,7 @@
   <div id="wrapper-project-work">
     <section class="project-work-first-section">
       <div class="project-work-img">
-        <img src="/bilder/Drucktechnik_Zeichenfläche 1_Zeichenfläche 1.png" alt="Mockup Webdesign auf unterschiedlichen Geräten" width="auto" height="auto">
+        <img src="/bilder/Drucktechnik_Zeichenfläche 1_Zeichenfläche 1.png" alt="" width="auto" height="auto">
       </div>
       <div class="project-text-container-prints">
               <div class="text-container-prints-first-section">
@@ -96,11 +96,11 @@
 
         <div class="prints-img">
 
-            <img class="fade-in-prints" src="/bilder/Kassette_var2.png" alt="UV Druck auf Musikkassette in Vierfarbdruck Variante 1" width="auto" height="auto">
-            <img class="fade-in-prints" src="/bilder/Webseite Kassette.png" alt="UV Druck auf Musikkassette in Vierfarbdruck Variante 2" width="auto" height="auto">
-          <img class="fade-in-prints" src="/bilder/Kassette_var3.png" alt="UV Druck auf Musikkassette in Vierfarbdruck Variante 3" width="auto" height="auto">
-          <img class="fade-in-prints" src="/bilder/Kassette_var5.png" alt="UV Druck auf Musikkassette in Vierfarbdruck Variante 4" width="auto" height="auto">
-          <img class="fade-in-prints" src="/bilder/UV Druck Kassette2.png" alt="UV Druck auf Musikkassette in Vierfarbdruck Variante 5" width="auto" height="auto">
+            <img class="fade-in-prints" src="/bilder/Kassette_var2.png" alt="Faltschachteldruck als Beispielbild" width="auto" height="auto">
+            <img class="fade-in-prints" src="/bilder/Webseite Kassette.png" alt="UV Druck auf Musikkassette in Vierfarbdruck" width="auto" height="auto">
+          <img class="fade-in-prints" src="/bilder/Kassette_var3.png" alt="UV Druck auf Kassettenhüllen in Vierfarbdruck" width="auto" height="auto">
+          <img class="fade-in-prints" src="/bilder/Kassette_var5.png" alt="Cover, Einleger, Faltschachteln, Schuber bedruckt, geschnitten und gerillt" width="auto" height="auto">
+          <img class="fade-in-prints" src="/bilder/UV Druck Kassette2.png" alt="UV Druck auf Musikkassette in Vierfarbdruck und Faltschachteldruck in Kombination mit einem Kundendesign" width="auto" height="auto">
         </div>
     </div>
     <div class="print-work">
@@ -161,12 +161,12 @@
       </div>
       
       <div class="textil-prints-img-container">
-          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var1.png" alt="Textildruck auf Shirt Variante 1" width="auto" height="auto">
-          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var2.png" alt="Textildruck auf Shirt Variante 2" width="auto" height="auto">
-          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var3.png" alt="Textildruck auf Shirt Variante 3" width="auto" height="auto">
-          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var4.png" alt="Textildruck auf Shirt Variante 4" width="auto" height="auto">
-          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var5.png" alt="Textildruck auf Shirt Variante 5" width="auto" height="auto">
-          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var6.png" alt="Textildruck auf Shirt Variante 6" width="auto" height="auto">
+          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var1.png" alt="Textildruck auf schwarzem Shirt mit einem abstrakten Kopf in Farbe" width="auto" height="auto">
+          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var2.png" alt="Textildruck auf weißem Shirt mit einer Motte in schwarz weiß" width="auto" height="auto">
+          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var3.png" alt="Textildruck auf schwarzem Shirt mit einem Wurm und im Hintergrund eine Spirale in schwarz weiß" width="auto" height="auto">
+          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var4.png" alt="Textildruck auf weißem Shirt mit Weltkugel hinter einem Polygon Käfig aus Glas. In Farbe" width="auto" height="auto">
+          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var5.png" alt="Textildruck auf schwarzem Shirt mit einem abstrakten organischen geometrischen Design in Farbe" width="auto" height="auto">
+          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var6.png" alt="Textildruck auf weißem Shirt mit einem Monsterauge in Farbe" width="auto" height="auto">
     </div>
     <div class="print-work">
       <h4>Aufgabenbereiche</h4>
@@ -197,8 +197,8 @@
    
     
   <div class="pre-back-buttons">
-    <button><a href="project-webdesign.html">&#129092; Web Design</a></button>
-    <button><a href="project-illustration.html">Graphics &#129094;</a></button>
+    <a href="project-webdesign.html"><button>&#129092; Web Design</button></a>
+    <a href="project-illustration.html"><button>Graphics &#129094;</button></a>
   </div>
   </main>
   
